--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/assets/iconAdit.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/style/app.css" rel="stylesheet">
-    <title>Portorin</title>
+    <title>MyPortorin</title>
   </head>
   <body>
     <div id="root"></div>
